--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.14.0",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "jose": "^5.4.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
